# Algorithmic-Trading

./: pyproject.toml  requirements.txt  swing_trade_analysis.py
algorithmic_trading/analysis/: analysis.py  bist_stock_scanner_alpha.py  symbols.txt  us_stock_analysis.py
algorithmic_trading/bot/: bot.py
algorithmic_trading/portfolio/: weights_calculator.py
analysis/: analysis.py
bot/: bot.py
