[project]
name = "algorithmic-trading"
version = "0.1.0"
description = ""
authors = [
    {name = "Tolga Karahan"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "dash (>=3.0.2,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
